# Box2D-and-SFML-demo

./: .gitignore  Box2D and SFML.cbp  Box2DDebug.cbp  Box2DDebug.depend  Box2DDebug.layout  CMakeLists.txt  README  README.md  main.cpp
cmake-modules/: FindSFML.cmake
include/: DebugDraw.h  GameKernel.h  Globals.h  QueryCallback.h
resources/backgrounds/: Thumbs.db
src/: CMakeLists.txt  DebugDraw.cpp  DebugDraw.h  GameKernel.cpp  GameKernel.h  Globals.h  Material.cpp  Material.h  QueryCallback.cpp  main.cpp
